Creo controllers de inmueble, controller cloudinary , repositorios y services . Funcional hasta aca

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3306/inmobiliaria
     username: root
     password: 123456
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+appDescription: 'Inmobiliaria 360 JCHL'
+appVersion: '1.0.0'
