--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.jetbrains:annotations:24.0.0'
+	implementation 'org.jetbrains:annotations:24.0.0'
+//	implementation group: 'com.cloudinary', name: 'cloudinary-core', version: '1.33.0'
+	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.33.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
