--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+      dialect: org.hibernate.dialect.MySQL5Dialect
+  security:
+    enable-csrf: 'false'
+
 appDescription: 'Inmobiliaria 360 JCHL'
 appVersion: '1.0.0'
+
+
