--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,15 @@ dependencies {
 //	implementation group: 'com.cloudinary', name: 'cloudinary-core', version: '1.33.0'
 	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.33.0'
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.mapstruct:mapstruct:1.5.3.Final' // OR use this with Java 8 and beyond: org.mapstruct:mapstruct-jdk8:...
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final' // if you are using mapstruct in test code
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
